Correcciones de archivo

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
 copy.src.files=false
 copy.src.target=
-remote.connection=ci-55dde0
-remote.directory=/pyme
+remote.connection=pyme-547acb
 remote.upload=ON_SAVE
 run.as=REMOTE
 url=http://ci/ci_pyme/
