Componentes Tamaño y Campos borrar

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,10 +13,10 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
 resources.db.adapter = PDO_MYSQL
 resources.db.params.host = localhost
-resources.db.params.username = root
-resources.db.params.password = creativo
+resources.db.params.username = pymehost
+resources.db.params.password = uE1Quxqtz5sT
 resources.db.params.dbname = ci_pyme
-;resources.db.params.charset = "utf8"
+resources.db.params.charset = "utf8"
 resources.db.isDefaultTableAdapter = true
 
 [staging : production]
